app/src/pages/inside/testCaseLibraryPage/testCaseDetailsPage/testCaseDetailsHeader/testCaseDetailsHeader.scss
/*
 * Copyright 2025 EPAM Systems
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

.header {
  background-color: var(--rp-ui-base-bg-000);
  padding: 16px 32px 12px;
  border-bottom: 1px solid var(--rp-ui-base-e-100);

  &__breadcrumb {
    display: flex;
    align-items: center;
    gap: 12px;
    margin-bottom: 12px;
  }

  &__title {
    display: flex;
    align-items: center;
    gap: 9px;
    margin-bottom: 5px;
    font-size: 20px;
    font-family: $FONT-REGULAR;
    line-height: 31px;
    color: var(--rp-ui-base-almost-black);
  }

  &__title-icon {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 24px;
    height: 24px;
  }

  &__edit-button {
    background: none;
    border: none;
    width: 16px;
    height: 16px;
    padding: 0;
    cursor: pointer;
    outline: none;
    path {
      fill: var(--rp-ui-base-e-300);
    }
    &:hover {
      path {
        fill: var(--rp-ui-base-e-400);
      }
    }
  }

  &__more-button {
    padding: 7px 12px;
    svg {
      width: 16px;
      height: 16px;
    }
  }

  &__info-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  &__meta {
    display: flex;
    gap: 24px;
    font-size: 13px;
    font-family: $FONT-ROBOTO-REGULAR;
    line-height: 20px;
  }

  &__meta-item {
    display: flex;
    gap: 8px;
    align-items: center;

    &:last-child {
      gap: 4px;
    }
  }

  &__meta-label {
    color: var(--rp-ui-base-almost-black);
    font-size: 13px;
    font-family: $FONT-ROBOTO-REGULAR;
  }

  &__meta-value {
    color: var(--rp-ui-base-almost-black);
    font-size: 13px;
    font-family: $FONT-ROBOTO-REGULAR;
  }

  &__actions {
    display: flex;
    gap: 10px;
    align-items: center;
  }

  &__copy {
    margin-left: 4px;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 16px;
    height: 16px;
    cursor: pointer;
    opacity: 0.6;
    transition: opacity 0.2s ease;

    &:hover {
      opacity: 1;
    }

    svg {
      width: 12px;
      height: 12px;
    }
  }
}

